# FacturaExtractor-AI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.txt  main.py  pyproject.toml
.github/: FUNDING.yml
config/: config_app.py
db/: crud.py  database.py
modules/: config.py  csv_exporter.py  file_manager.py  llm_client.py  reader.py
views/: charts_view.py  extractor_view.py  helpers.py  history_view.py  settings_view.py  state_manager.py
