[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factura-extractor"
version = "0.1.0"
description = "Extractor de facturas con IA local"
requires-python = ">=3.9"
dependencies = [
    "flet==0.28.3",
    "llama-cpp-python[server]>=0.3.23",
    "httpx",
    "pdf_oxide",
    "pypdfium2",
    "easyocr",
    "pillow",
    "matplotlib",
    "psutil",
]

[tool.setuptools.packages.find]
where = ["."]